# CamPost-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  hwp_test_result.txt  hwp_test_v2.txt  main.py  migrate_article_ids.py  pyproject.toml  render.yaml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  crawl.yml
crawler/: __init__.py  backend_importer.py  config.py  content.py  db.py  extractor.py  file_handler.py  quality.py  r2_storage.py  r2_uploader.py  reprocess.py  scraper.py  storage.py
scripts/: audit_attachment_quality.py  audit_content_html.py  check-local.sh  convert_hwp_previews.py  find_duplicate_attachments.py  measure_hwp_coverage.py  migrate_article_ids.py  normalize_attachment_metadata.py  re_extract.py  recover_article.py  repair_notice_metadata.py  reparse_docx_attachments.py  reparse_hwp_attachments.py  run-local.sh
tests/: test_ai_extractor.py  test_content.py  test_extractor.py  test_file_handler.py  test_quality.py  test_reprocess.py  test_storage.py
