[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campost-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
	"pre-commit>=4.2",
	"ruff>=0.11",
]

[tool.setuptools]
packages = ["crawler"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
